--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,14 @@
 language: node_js
 node_js:
-  - "10"
-env:
-  - CXX=g++-4.8
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
+  - lts/*
 install:
-  - npm install -g vuepress@0.14.11
+  - yarn install # npm ci
 script:
-  - npm run docs:build
-cache:
-  directories:
-    - "node_modules"
-notifications:
-  email: false
+  - yarn docs:build # npm run docs:build
 deploy:
   provider: pages
   local_dir: docs/.vuepress/dist
-  github-token: $GITHUB_TOKEN
-  repo: akeneolabs/akeneolabs.github.io
-  keep-history: true
-  target-branch: master
+  github_token: $GITHUB_TOKEN # A token generated on GitHub allowing Travis to push code on you repository. Set in the Travis settings page of your repository, as a secure variable
+  keep_history: true
   on:
     branch: master
