--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "scripts": {
     "docs:build": "vuepress build docs",
     "docs:dev": "vuepress dev docs"
+  },
+  "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.5.0",
+    "@vuepress/theme-default": "^1.4.1",
+    "vuepress-plugin-nprogress": "^1.1.7"
   }
 }
