--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.5.0",
+    "@vuepress/plugin-google-analytics": "^1.5.0",
     "@vuepress/theme-default": "^1.4.1",
     "vuepress-plugin-nprogress": "^1.1.7"
   }
