--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 install:
   - yarn install
 script:
-  - npm run docs:build
+  - yarn docs:build
 deploy:
   provider: pages
   skip_cleanup: true
